--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatever-typer",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
     "build": "tsc",
