--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "devDependencies": {
     "@types/node": "^22.9.1",
     "typescript": "^5.6.3"
+  },
+  "pkg": {
+    "assets": ["assets/commonwords.json"],
+    "scripts": "dist/index.js"
   }
 }
